--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "flipbook-js",
   "version": "1.0.0",
-  "main": "index.js",
-  "author": "Taufiq El Rahman",
+  "description": "A plugin built on javascript which allows users animate to a book with flippable pages",
+  "main": "dist/flipbook.umd.js",
+  "module": "dist/flipbook.esm.js",
+  "browser": "dist/flipbook.umd.js",
+  "author": "Taufiq",
   "license": "MIT",
   "scripts": {
     "scss": "node-sass src/style.scss dist/flipbook.css",
-    "lint": "node_modules/.bin/eslint --fix .",
+    "lint": "eslint --fix src",
     "build": "yarn lint && yarn scss && rollup -c",
     "demo": "cp dist/flipbook.umd.min.js demo/flipbook.umd.min.js && cp dist/flipbook.min.css demo/flipbook.min.css"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "clean-css-cli": "^5.6.3",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.0",
@@ -19,7 +25,9 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "rollup": "^4.46.3",
+    "terser": "^5.43.1"
   },
   "dependencies": {
     "node-sass": "^9.0.0"
