--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A plugin built on javascript which allows users animate to a book with flippable pages",
   "main": "dist/flipbook.esm.min.js",
   "module": "dist/flipbook.esm.min.js",
+  "types": "dist/flipbook.d.ts",
   "type": "module",
   "author": "Taufiq",
   "license": "MIT",
@@ -17,7 +18,7 @@
   "scripts": {
     "scss": "sass src/style.scss dist/flipbook.css",
     "lint": "eslint --fix src",
-    "build": "yarn lint && yarn scss && rollup -c",
+    "build": "yarn lint && yarn scss && rollup -c && cp src/flipbook.d.ts dist/flipbook.d.ts",
     "minify": "cleancss -o dist/flipbook.min.css dist/flipbook.css && terser dist/flipbook.umd.js -o dist/flipbook.umd.min.js --compress --mangle && terser dist/flipbook.esm.js -o dist/flipbook.esm.min.js --compress --mangle",
     "demo": "cp dist/flipbook.umd.min.js demo/flipbook.umd.min.js && cp dist/flipbook.min.css demo/flipbook.min.css"
   },
@@ -60,6 +61,7 @@
   "files": [
     "dist/flipbook.umd.min.js",
     "dist/flipbook.esm.min.js",
-    "dist/flipbook.min.css"
+    "dist/flipbook.min.css",
+    "dist/flipbook.d.ts"
   ]
 }
