Add unit and E2E tests for FlipBook component
- Created unit tests for FlipBook functionality in `tests/FlipBook.test.js`.
- Added README for test structure and instructions in `tests/README.md`.
- Implemented basic E2E tests for FlipBook in `tests/e2e/basic.spec.js` and `tests/e2e/flipbook.spec.js`.
- Set up test environment in `tests/setup.js` with Modernizr mock.
- Configured Vitest for testing with coverage in `vitest.config.js`.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,17 @@ TODOS.md
 demo.zip
 package.zip
 screenshot.zip
+
+todo.md
+
+# Test coverage directory
+coverage/
+.nyc_output/
+
+# Playwright
+playwright-report/
+test-results/
+playwright/.cache/
+
+# Vitest
+.vitest/
