--- a/package.json
+++ b/package.json
@@ -18,13 +18,23 @@
   "scripts": {
     "scss": "sass src/style.scss dist/flipbook.css",
     "lint": "eslint --fix src",
-    "build": "yarn lint && yarn scss && rollup -c && cp src/FlipBook.d.ts dist/flipbook.d.ts",
+    "build": "pnpm lint && pnpm scss && rollup -c && cp src/FlipBook.d.ts dist/flipbook.d.ts",
     "minify": "cleancss -o dist/flipbook.min.css dist/flipbook.css && terser dist/flipbook.umd.js -o dist/flipbook.umd.min.js --compress --mangle && terser dist/flipbook.esm.js -o dist/flipbook.esm.min.js --compress --mangle",
-    "demo": "cp dist/flipbook.umd.min.js demo/flipbook.umd.min.js && cp dist/flipbook.min.css demo/flipbook.min.css"
+    "demo": "cp dist/flipbook.umd.min.js demo/flipbook.umd.min.js && cp dist/flipbook.min.css demo/flipbook.min.css",
+    "demo:serve": "npx serve demo -p 5173",
+    "test": "vitest",
+    "test:unit": "vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:all": "pnpm test:unit && pnpm test:e2e"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
+    "@vitest/coverage-v8": "^4.0.14",
+    "@vitest/ui": "^4.0.14",
     "clean-css-cli": "^5.6.3",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.11.0",
@@ -34,10 +44,14 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "happy-dom": "^20.0.11",
+    "jsdom": "^27.2.0",
     "prettier": "^2.0.5",
     "rollup": "^4.46.3",
     "sass": "^1.90.0",
-    "terser": "^5.43.1"
+    "serve": "^14.2.5",
+    "terser": "^5.43.1",
+    "vitest": "^4.0.14"
   },
   "keywords": [
     "flipbook",
