feat: add demo verification process and update related scripts

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "clean": "rm -rf dist && mkdir -p dist",
     "prebuild": "pnpm clean",
     "postbuild": "pnpm minify && pnpm demo",
-    "prerelease": "pnpm lint:check && pnpm test:all && pnpm build",
+    "verify:demo": "./verify-demo-sync.sh",
+    "prerelease": "pnpm lint:check && pnpm test:all && pnpm build && pnpm verify:demo",
     "release:patch": "pnpm prerelease && npm version patch && pnpm release:publish",
     "release:minor": "pnpm prerelease && npm version minor && pnpm release:publish",
     "release:major": "pnpm prerelease && npm version major && pnpm release:publish",
