--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,9 @@ jobs:
       - name: Build project
         run: pnpm build
 
+      - name: Verify demo sync
+        run: pnpm verify:demo
+
       - name: Run E2E tests
         run: pnpm test:e2e
 
